--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^6.2.4",
-    "nodemailer": "^6.7.2"
+    "nanoid": "^3.3.1",
+    "nodemailer": "^6.7.2",
+    "uuid": "^8.3.2"
   }
 }
